@@ -4,6 +4,7 @@ Change Log
 v0.12.0
 -------
 - Timelapse has second/minute/hour/day units.
+- Added splash screen.
 
 v0.11.1
 -------
